:construction: feat: added support translate texts

--- a/assets/lang/pt-BR.json
+++ b/assets/lang/pt-BR.json
@@ -4,6 +4,75 @@
   "label_menu": "Menu",
   "label_orders": "Pedidos",
   "label_reports": "Relatórios",
-  "button_ok": "Ok"
+  "button_ok": "Ok",
+  "text": "Top Produtos",
+  "subText": "Produtos mais vendidos",
+  "sales_text": "Top Vendas",
+  "sales_subText": "Clientes com maior valor em compras",
+  "order_text": "Pedidos",
+  "order_subText": "Pedidos aprovados e cancelados",
+  "select_filter": "Selecione um filtro",
+  "export": "Exportar",
+  "no_product_found": "Nenhum produto encontrado!",
+  "no_payment_found": "Nenhum pagamento encontrado!",
+  "no_city_found": "Nenhuma cidade encontrada!",
+  "no_age_group_found": "Nenhuma faixa etária encontrada!",
+  "no_filter_selected": "Nenhum filtro selecionado!",
+  "product": "Produto",
+  "quantity": "Quantidade",
+  "unit_value": "Valor Unitário",
+  "installment": "Parcela",
+  "method": "Forma",
+  "value": "Valor",
+  "city": "Cidade",
+  "age_group": "Faixa Etária",
+  "total_value": "Valor Total",
+  "export_success": "Dados exportados para a pasta 'Downloads'!",
+  "export_error": "Não foi possível exportar os dados!",
+  "unit_price": "Valor Unitário",
+  "form": "Forma",
+  "product_list": "Listagem de produtos mais vendidos",
+  "payment_totalization": "Totalização de Formas de Pagamento por dia",
+  "sales_totalization_by_city": "Totalização de vendas por Cidade",
+  "sales_totalization_by_age": "Totalização de vendas por Faixa Etária",
+  "no_orders_found": "Foram encontrados {{number}} pedidos.",
+  "orders_found": "Foram encontrados {{number}} pedidos.",
+  "orders_synced_successfully": "Pedidos sincronizados com sucesso!",
+  "unable_to_fetch_orders": "Não foi possível obter os pedidos!",
+  "order_details": "Detalhes do pedido",
+  "no_products_found": "Nenhum produto encontrado",
+  "no_payments_found": "Nenhum pagamento encontrado",
+  "payment": "Pagamento",
+  "close": "Fechar",
+  "sync_tooltip": "Sincronizar Pedidos",
+  "search": "Pesquisar",
+  "search_hint": "Digite o número do pedido",
+  "no_orders_found_view": "Nenhum pedido encontrado.",
+  "order_number": "Número do Pedido",
+  "order_date": "Data do Pedido",
+  "client_name": "Nome do Cliente",
+  "status": "Status",
+  "no_order_selected": "Nenhum pedido selecionado.",
+  "order_information": "Informações do Pedido",
+  "no_items_found": "Nenhum item encontrado.",
+  "order_date_modified": "Data Alteração",
+  "discount": "Descontos",
+  "shipping": "Frete",
+  "subtotal": "SubTotal",
+  "total": "Total",
+  "client_data": "Dados do Cliente",
+  "client": "Cliente",
+  "document": "Documento",
+  "birth_date": "Data Nascimento",
+  "email": "Email",
+  "delivery_location": "Local da entrega",
+  "address": "Endereço",
+  "number": "Número",
+  "zip_code": "CEP",
+  "neighborhood": "Bairro",
+  "state": "Estado",
+  "complement": "Complemento",
+  "reference": "Referência"
+
 
 }
