:construction: feat: added a validation empty metrics in reports

--- a/assets/lang/pt-BR.json
+++ b/assets/lang/pt-BR.json
@@ -72,7 +72,8 @@
   "neighborhood": "Bairro",
   "state": "Estado",
   "complement": "Complemento",
-  "reference": "Referência"
+  "reference": "Referência",
+  "no_metrics": "Nenhum indicador disponível!"
 
 
 }
